--- a/css/style.css
+++ b/css/style.css
@@ -52,17 +52,18 @@ a:hover {
   background: url("../images/background.jpg");
   background-size: cover;
   color: #fff;
-  padding: 0;
+}
+.header-block .container .row {
+  margin-top: 7%;
 }
 .header-block .container .row .schedule {
   width: 500px;
   height: 500px;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 0px 5px #000;
   border-radius: 50%;
   padding: 0;
   font-family: serif;
-  margin-top: 7%;
 }
 .header-block .container .row .schedule img {
   width: 80%;
@@ -79,7 +80,7 @@ a:hover {
   background-color: #a09545;
 }
 .header-block .container .row .schedule .date {
-  line-height: 85px;
+  line-height: 70%;
   font-size: 90px;
   font-family: CochinArchaic;
   /*color: #a09545;*/
@@ -95,15 +96,14 @@ a:hover {
   font-family: serif;
   font-weight: bold;
   width: 40%;
-  margin-top: 50px;
+  margin-top: 7%;
   padding: 10px 0px;
 }
 .header-block .container .row .schedule .btn:hover {
   box-shadow: 0px 0px 8px black;
 }
 .header-block .container .arrow {
-  background: rgba(48, 74, 65, 0.2);
-  -webkit-transition: 0.3s;
+  -webkit-transition: 0.5s;
   box-shadow: 0px 0px 5px #000;
   border-radius: 50%;
   width: 60px;
@@ -121,7 +121,7 @@ a:hover {
   padding: 10%;
 }
 .container-fluide {
-  background: url('../images/leavse.png');
+  background: url('../images/greyfloral.png');
 }
 .container-fluide .container iframe {
   margin-top: 50px;
@@ -136,44 +136,59 @@ a:hover {
 .container-fluide .events {
   padding-top: 50px;
 }
+.container-fluide .events .row {
+  margin-bottom: 50px;
+}
+.container-fluide .events .row .btn-danger {
+  background: none;
+  border: 1px solid #000;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: #000;
+}
+.container-fluide .events .row .btn-danger:focus {
+  outline: none;
+}
 .container-fluide .events .row .description {
-  padding-top: 40px;
   padding-bottom: 40px;
 }
-.container-fluide .events .row .description:hover ul {
-  padding: 10px;
+.container-fluide .events .row .right {
+  float: right;
 }
-.container-fluide .events .row .description ul {
-  -webkit-transition: all 0.5s ease-out;
-  padding: 5px;
-  width: 100%;
+.container-fluide .events .row .left {
+  float: left;
 }
-.container-fluide .events .row .description ul li {
-  list-style: none;
-  margin-bottom: 10px;
-  font-size: 20px;
+.container-fluide .events .row .fa {
+  margin-left: 10px;
+  font-size: 16px;
 }
-.container-fluide .events .row .description ul li a {
-  font-weight: bold;
-}
-.container-fluide .events .row .description ul li .fa {
-  margin-right: 20px;
-  font-size: 20px;
-}
-.container-fluide .events .left {
-  padding: 40px 0px;
-  margin-bottom: 30px;
-}
-.container-fluide .events .left .image {
-  padding-left: 40px;
-  margin-bottom: 50px;
-}
-.container-fluide .events .right .image {
-  padding-right: 50px;
-  margin-bottom: 50px;
-}
-.main {
-  background: url(../images/leavse.png);
-  background-size: cover;
+.container-fluide .events .row img {
+  box-shadow: 0px 0px 15px #000;
 }
 /*--------Новый код--------*/
+@media screen and (max-width: 768px) {
+  .header-block .container .row .schedule {
+    width: 300px;
+    height: 300px;
+  }
+  .header-block .container .row .schedule .date {
+    font-size: 50px;
+  }
+  .header-block .container .row .schedule .btn {
+    font-size: 15px;
+  }
+  .header-block .container .arrow {
+    -webkit-transition: 0.5s;
+    box-shadow: 0px 0px 5px #000;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    right: 10%;
+    bottom: 10%;
+  }
+  .container-fluide .container iframe {
+    width: 90%;
+    height: 210px;
+  }
+}
