--- a/css/style.less
+++ b/css/style.less
@@ -54,18 +54,17 @@ a {
 	background: url("../images/background.jpg");
 	background-size: cover;
 	color: #fff;
-	padding: 0;
 	.container {
 		.row {
+			margin-top: 7%;
 			.schedule {
 				width: 500px;
 				height: 500px;
-				background: rgba(0,0,0, 0.3);
+				background: rgba(0,0,0, 0.2);
 				-webkit-box-shadow: 0px 0px 5px #000;
 				border-radius: 50%;
 				padding: 0;
 				font-family: serif;
-			    margin-top: 7%;
 			    img {
 			    	width: 80%;
 			    	margin-top: 15%;
@@ -81,7 +80,7 @@ a {
 					background-color: rgb(160,149,69);
 			    }
 			    .date {
-			    	line-height: 85px;
+			    	line-height: 70%;
 			    	font-size: 90px;
 			    	font-family: CochinArchaic;
 			    	/*color: #a09545;*/
@@ -97,7 +96,7 @@ a {
 			    	font-family: serif;
 			    	font-weight: bold;
 			    	width: 40%;
-			    	margin-top: 50px;
+			    	margin-top: 7%;
 			    	padding: 10px 0px;
 			    	&:hover {
 			    		box-shadow: 0px 0px 8px black;
@@ -106,8 +105,7 @@ a {
 			}			
 		}
 		.arrow {
-			background: rgba(48,74,65, 0.2);
-			-webkit-transition: 0.3s;
+			-webkit-transition: 0.5s;
 			box-shadow: 0px 0px 5px #000;
 			border-radius: 50%;
 			width: 60px;
@@ -129,7 +127,7 @@ a {
 	}
 }
 .container-fluide {
-	background: url('../images/leavse.png');
+	background: url('../images/greyfloral.png');
 	.container {
 		iframe {
 			margin-top: 50px;
@@ -149,51 +147,72 @@ a {
 		padding-top: 50px;
 		
 		.row {
+			.btn-danger {
+				background: none;
+				border: 1px solid #000;
+				margin-top: 10px;
+				margin-bottom: 10px;
+				color: #000;	
+				&:focus {
+					outline: none;
+				}
+			}
+			margin-bottom: 50px;
 			.description {
-				padding-top: 40px;
 				padding-bottom: 40px;
-				&:hover ul {
-					padding: 10px;
-				}
-				ul {
-					-webkit-transition: all 0.5s ease-out;
-					padding: 5px;
-					width: 100%;
-					li {
-						list-style: none;
-		    			margin-bottom: 10px;
-		    			font-size: 20px;
-		    			a {
-		    				font-weight: bold;
-		    			}
-		    			.fa {
-		    				margin-right: 20px;
-		   					font-size: 20px;
-		    			}
-					}
-				}
 			}
-
-		}
-		.left {
-			padding: 40px 0px;
-			margin-bottom: 30px;
-			.image {
-				padding-left: 40px;
-				margin-bottom: 50px;
+			.right {
+				float: right;
 			}
-		}
-		.right {
-			.image {
-				padding-right: 50px;
-				margin-bottom: 50px;
+			.left {
+				float: left;
+			}
+			.fa {
+				margin-left: 10px;
+				font-size: 16px;
+			}
+			img {
+				box-shadow: 0px 0px 15px #000;
+					
 			}
 		}
 	}
 }
-.main {
-	background: url(../images/leavse.png);
-	background-size: cover;
-}
-/*--------Новый код--------*/
 
+/*--------Новый код--------*/
+@media screen and (max-width: 768px) {
+	.header-block {
+		.container {
+			.row {
+				.schedule {
+					width: 300px;
+					height: 300px;
+					.date {
+						font-size: 50px;
+					}
+					.btn {
+						font-size: 15px;
+					}
+				}
+			}
+			.arrow {
+			    -webkit-transition: 0.5s;
+			    box-shadow: 0px 0px 5px #000;
+			    border-radius: 50%;
+			    width: 60px;
+			    height: 60px;
+			    position: absolute;
+			    right: 10%;
+			    bottom: 10%;
+			}	
+		}
+	}
+	.container-fluide {
+		.container {
+			iframe {
+				width: 90%;
+				height: 210px;
+			}
+		}
+	}
+}
